Edited Home, Main, assets/css/style.css, landpage.html and 1 more; Deleted theme.css and standard-page.html

--- a/theme/assets/landpage.html
+++ b/theme/assets/landpage.html
@@ -1,40 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>AC Corps IT - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="_/theme/assets/img/favicon.ico" rel="icon">
-  <link href="_/theme/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="_/theme/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="_/theme/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="_/theme/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="_/theme/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="_/theme/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="_/theme/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="_/theme/assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Green - v4.7.0
-  * Template URL: https://bootstrapmade.com/green-free-one-page-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
-
 <body>
 
   <!-- ======= Top Bar ======= -->
@@ -59,7 +22,7 @@
 
       <!-- <h1 class="logo me-auto"><a href="index.html">AC Corporation</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="_/theme/assets/img/logo.png" alt="" class="img-fluid">AC Corps IT</a>
+      <a class="logo me-auto" href="index.html"><img src="_/theme/assets/img/logo.png" alt="" class="img-fluid">AC Corps IT</a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -177,14 +140,14 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Meet the leading provider of Engineering and Science Applied Computing.</h3>
-            <p class="fst-italic">
+            <p class="fst-italica">
               The proven AC Corps IT companies provides comprehensive services to build engineering-scale AI and Applied Computing applications 
               more efficiently and cost-effectively than alternative approaches. Areas of actions such as,
             </p>
             <ul>
-              <li><i class="bi bi-check-circled"></i> Applied computing and artificial intelligence in various fields of knowledge.</li>
-              <li><i class="bi bi-check-circled"></i> Computational hydraulic and applied computing to science and engineering</li>
-              <li><i class="bi bi-check-circled"></i> Developing, migrations, field testing and deploy to production of IoT, embedded systems and cloud services.</li>
+              <li><i class="bi bi-check-circle"></i> Applied computing and artificial intelligence in various fields of knowledge.</li>
+              <li><i class="bi bi-check-circle"></i> Computational hydraulic and applied computing to science and engineering</li>
+              <li><i class="bi bi-check-circle"></i> Developing, migrations, field testing and deploy to production of IoT, embedded systems and cloud services.</li>
             </ul>
             <p>
               The AC Corps IT companies supports the value chain in any industry with prebuilt, configurable, high-value AI and Applied Computing applications 
@@ -366,7 +329,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <section id="cta-sec" class="cta-sec">
       <div class="container">
 
         <div class="row">
@@ -575,5 +538,3 @@
   <script src="_/theme/assets/js/main.js"></script>
 
 </body>
-
-</html>
