Edited assets/css/style.css and landpage.html

--- a/theme/assets/landpage.html
+++ b/theme/assets/landpage.html
@@ -22,7 +22,7 @@
 
       <!-- <h1 class="logo me-auto"><a href="index.html">AC Corporation</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a class="logo me-auto" href="index.html"><img src="_/theme/assets/img/logo.png" alt="" class="img-fluid">AC Corps IT</a>
+      <a class="logo me-auto" href=""><img src="_/theme/assets/img/logo.png" alt="" class="img-fluid">AC Corps IT</a>
 
       <nav id="navbar" class="navbar">
         <ul>
