--- a/theme/assets/landpage.html
+++ b/theme/assets/landpage.html
@@ -1,5 +1,5 @@
 <body>
-
+  
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
@@ -26,11 +26,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="index.html#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
-          <li><a class="nav-link scrollto active " href="index.html#portfolio">Portfolio</a></li>
-          <li><a class="getstarted scrollto" href="index.html#about">Get Started</a></li>
+          <li><a class="nav-link scrollto active " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <!-- <li><a class="getstarted scrollto" href="#about">Sign in</a></li>  -->
+          <li><a class="getstarted" role="button" onclick="showJsAlert()">Sign in</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
