--- a/theme/assets/landpage.html
+++ b/theme/assets/landpage.html
@@ -31,7 +31,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
           <!-- <li><a class="getstarted scrollto" href="#about">Sign in</a></li>  -->
-          <li><a class="getstarted" role="button" onclick="showJsAlert()">Sign in</a></li>
+          <li><input id="sign-in" class="getstarted" type="button" value="Sign in" onclick="showJsAlert()"></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
